# context-core

./: .bandit  .coverage  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-docker.yml
docs/: ARCHITECTURE.md
scripts/: smoke_test.sh
src/context_core/: __init__.py  cli.py  config.py  ingest.py  models.py  ollama_client.py  rag.py  search.py  security.py  utils.py  vault.py
src/context_core/watcher/: __init__.py  clipboard_monitor.py  daemon.py  file_watcher.py  history_ingestor.py  state.py
tests/: conftest.py  test_chat_cli.py  test_cli.py  test_clipboard_monitor.py  test_daemon.py  test_file_watcher.py  test_history_ingestor.py  test_ingest.py  test_models.py  test_ollama_client.py  test_rag.py  test_search.py  test_security.py  test_state.py  test_vault.py  test_watch_cli.py
